<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edt_min"
        android:text="@string/txt_min" />

    <EditText
        android:id="@+id/edt_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_max"
        android:layout_toEndOf="@+id/txt_min"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txt_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edt_max"
        android:text="@string/txt_max" />

    <EditText
        android:id="@+id/edt_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_min"
        android:layout_toEndOf="@+id/txt_max"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txt_qtde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edt_qtde"
        android:text="@string/txt_qtde" />

    <EditText
        android:id="@+id/edt_qtde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_max"
        android:layout_below="@+id/edt_max"
        android:layout_toEndOf="@+id/txt_qtde"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txt_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/grp_format"
        android:text="@string/txt_format" />

    <RadioGroup
        android:id="@+id/grp_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edt_max"
        android:layout_below="@+id/edt_qtde"
        android:layout_toEndOf="@+id/txt_format"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/opt_xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/opt_xml" />

        <RadioButton
            android:id="@+id/opt_json"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_json" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_gerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/grp_format"
        android:layout_marginTop="10dp"
        android:onClick="gerar"
        android:text="@string/btn_gerar" />

    <Button
        android:id="@+id/btn_detalhes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_gerar"
        android:layout_toStartOf="@+id/btn_gerar"
        android:onClick="verDetalhes"
        android:text="@string/btn_detalhes" />

    <TextView
        android:id="@+id/txt_numeros_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_gerar"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:padding="5dp"
        android:text="@string/txt_numeros_title"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txt_numeros_title">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_numeros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </ScrollView>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminate="true"
            style="?android:attr/progressBarStyleLarge" />
    </FrameLayout>
</RelativeLayout>